--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,9 +1,10 @@
 {
     "compilerOptions": {
         "lib": [
-            "deno.window",
-            "deno",
-            "dom"
+            "dom",
+            "dom.iterable",
+            "dom.asynciterable",
+            "deno.ns"
         ]
     },
     "fmt": {
