added wip: drag and drop support

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -13,7 +13,7 @@
         }
     },
     "tasks": {
-        "gui": "deno run -A --unstable --no-check gui/serve.ts",
+        "gui": "deno run --allow-read --allow-run --allow-write=. --allow-net --allow-env --unstable --no-check gui/serve.ts",
         "jcall": "deno run --watch json-calls-protocol/test.ts"
     }
 }
